Add toggle, nullable buttons, and toast exemple

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <!-- Le boutton pour fermer le menu du millieu -->
         <button id="closeMiddle">Fermer</button>
     </div>
+
+    <div id="toast" class="toast">
+        <p>Salutation :p</p>
+    </div>
 </body>
 
 </html>
